--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-#title: title
+title: title
 domain: andydo1998.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://andydo1998.github.io # the base hostname & protocol for your site, e.g. http://example.com
