--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,7 @@
 
 title: title
 domain: andydo1998.github.io
-baseurl: "/dsc180_capstone_project_website" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: https://andydo1998.github.io # the base hostname & protocol for your site, e.g. http://example.com
 
 
