--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Predicting Application Use to Reduce User Wait Time
 domain: andydo1998.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://andydo1998.github.io/dsc180b_b14group2_website # the base hostname & protocol for your site, e.g. http://example.com
+url: https://andydo1998.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 
 
 
