--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Predicting Application Use to Reduce User Wait Time
+description: Sasami Scott, Andy Do, Timothy Tran
 domain: andydo1998.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://andydo1998.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
